set max cache size